<resources>
    <string name="app_name">仿生机器鱼</string>

    <string name="start_swim">开始游动</string>
    <string name="start_light">点亮灯光</string>
    <string name="black">黑</string>
    <string name="blue">蓝</string>
    <string name="green">绿</string>
    <string name="cyan">青</string>
    <string name="red">红</string>
    <string name="magenta">洋红</string>
    <string name="yellow">黄</string>
    <string name="white">白</string>
    <string name="up">前进</string>
    <string name="right">右转</string>
    <string name="left">左转</string>
    <string name="wait">等待</string>
    <string name="confirm">确定</string>
    <string name="send">发送</string>
    <string name="light_color">灯光颜色</string>
    <string name="file_name_with_colon">文件名称：</string>
    <string name="auto_reconnect">自动重连</string>
    <string name="close_bluetooth_when_quit">退出时关闭蓝牙</string>
    <string name="admit_drag_controller">允许拖动控件</string>
    <string name="save_layout">保存布局</string>
    <string name="load_layout">加载布局</string>
    <string name="time">时间</string>
    <string name="second">秒</string>
    <string name="quick_navigation">快速导航</string>
    <string name="operating_instruction">操作说明</string>
    <string name="notes">注意事项</string>
    <string name="parameter_specification">参数规格</string>
    <string name="electric_quantity">电量</string>
    <string name="bluetooth_state">蓝牙状态</string>
    <string name="connect_state">连接状态</string>
    <string name="gravity_sensor">重力感应</string>
    <string name="query">查询</string>
    <string name="select_light">选择灯光</string>
    <string name="controller_layout">控件布局</string>
    <string name="swim_mode">游动模式</string>
    <string name="modify_name">修改名字</string>
    <string name="text_program">文本化编程</string>
    <string name="graphic_program">图形化编程</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="test">测试</string>
    <string name="save">保存</string>
    <string name="load">加载</string>
    <string name="delete">删除</string>
    <string name="format">格式化</string>
    <string name="refresh">刷新</string>
    <string name="search">搜索</string>
    <string name="execute">执行</string>
    <string name="simulation">仿真</string>
    <string name="clear">清空</string>
</resources>
