<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/action_battery"
        android:title="@string/electric_quantity"
        app:showAsAction="ifRoom"
        android:icon="@android:color/transparent"
        android:checkable="false" />
    <item
        android:id="@+id/action_remote"
        android:title="@string/bluetooth_state"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:icon="@drawable/bluetooth_disabled"/>
    <item
        android:id="@+id/action_connect"
        android:title="@string/connect_state"
        app:showAsAction="ifRoom"
        android:icon="@drawable/disconnected"/>
    <item
        android:id="@+id/action_sensor"
        android:title="@string/gravity_sensor"
        app:showAsAction="ifRoom"
        android:icon="@drawable/manual"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/query"
        app:showAsAction="ifRoom"
        android:icon="@drawable/search"/>
    <item
        android:id="@+id/action_select_light"
        android:title="@string/select_light"
        app:showAsAction="ifRoom"
        android:icon="@drawable/light_color"/>
    <item
        android:id="@+id/action_moveWidget"
        android:title="@string/controller_layout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/layout"/>
    <item
        android:id="@+id/action_swimMode"
        android:title="@string/swim_mode"
        android:icon="@drawable/pattern"/>
    <item
        android:id="@+id/action_changeName"
        android:title="@string/modify_name"
        android:icon="@drawable/rename"/>
    <item
        android:id="@+id/action_program"
        android:title="@string/text_program"
        android:visible="true"
        android:icon="@drawable/text_program"/>
    <item
        android:id="@+id/action_ui_program"
        android:title="@string/graphic_program"
        android:visible="true"
        android:icon="@drawable/graphic_program"/>
    <item
        android:id="@+id/action_setting"
        android:title="@string/setting"
        app:showAsAction="never"
        android:icon="@drawable/settings"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="ifRoom"
        android:icon="@drawable/help"
        />
    <item
        android:id="@+id/action_test"
        android:title="@string/test"
        app:showAsAction="ifRoom"
        android:visible="false"/>
</menu>
