<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_execute"
        android:title="@string/execute"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_simulation"
        android:title="@string/simulation"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_clear"
        android:title="@string/clear"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_save"
        android:title="@string/save"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_load"
        android:title="@string/load"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_remove"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
</menu>